Modified Hero, tuning...

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,4 +6,8 @@
     .tag {
         @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight;
     }
+
+    .code-text {
+        @apply text-sm font-mono bg-[#222] text-[#f8f8f2] p-2 rounded-lg;
+    }
 }
